Add field 'imageUrl' in RoomEntity and make code cleaner in ChatService by creating RoomMapper.